--- a/app/src/main/res/layout/homescreen_item3.xml
+++ b/app/src/main/res/layout/homescreen_item3.xml
@@ -8,13 +8,14 @@
     app:cardElevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="100dp"
-        android:layout_height="100dp">
+        android:layout_width="150dp"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/cardview_image"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             app:layout_constraintBottom_toTopOf="@+id/cardview_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -25,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:textColor="@color/black"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardview_image" />
