--- a/app/src/main/res/layout/homescreen_item4.xml
+++ b/app/src/main/res/layout/homescreen_item4.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:textColor="@color/black"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/cardview2_sold"
             app:layout_constraintTop_toBottomOf="@+id/cardview2_text" />
 
